[gd_scene load_steps=10 format=2]

[ext_resource path="res://FredokaOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Options.gd" type="Script" id=2]
[ext_resource path="res://Images/UI/Bar.png" type="Texture" id=3]
[ext_resource path="res://Images/UI/Button_2.png" type="Texture" id=4]
[ext_resource path="res://Images/UI/Button_1.png" type="Texture" id=5]
[ext_resource path="res://Scenes/UI/ButtonTemplate.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.2, 0.752941, 0.858824, 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 238, 11, 38, 6 )

[sub_resource type="DynamicFont" id=2]
size = 72
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="Options" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PanelBackground" type="Panel" parent="."]
margin_right = 1925.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 5 )

[node name="VolumeSlider" type="HSlider" parent="PanelBackground"]
margin_left = 722.0
margin_top = 219.0
margin_right = 1769.0
margin_bottom = 278.0
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/grabber_area = SubResource( 3 )
tick_count = 10

[node name="VolumeLabel" type="Label" parent="PanelBackground"]
margin_left = 410.0
margin_top = 201.0
margin_right = 914.0
margin_bottom = 289.0
custom_fonts/font = SubResource( 2 )
text = "Volume"

[node name="BackButton" parent="PanelBackground" instance=ExtResource( 6 )]
margin_left = 771.0
margin_top = 664.0
margin_right = 1079.0
margin_bottom = 740.0
text = "Back"

[connection signal="value_changed" from="PanelBackground/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="PanelBackground/BackButton" to="." method="_on_BackButton_pressed"]
